# T2S

./: .env.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml
nginx/: nginx.conf
scripts/: docker-compose-with-gpu.cmd  docker-compose-with-gpu.ps1  docker-compose-with-gpu.sh
t2s_backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
t2s_backend/core/: admin.py  ai.py  chart_from_rows.py  consumers.py  models.py  ollama.py  ollama_client.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
t2s_backend/core/migrations/: 0001_initial.py  0002_alter_message_metadata.py  0003_remove_message_metadata_message_description_and_more.py  0004_databaseconnection.py
t2s_backend/core/utils/: db_connection.py  db_inspector.py  fetch_data.py  to_json.py
t2s_backend/t2s_backend/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
t2s_backend/users/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
t2s_backend/users/migrations/: 0002_emailmailing_emailmailingrecipient.py
t2s_frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
t2s_frontend/app/: globals.css  layout.tsx  page.tsx
t2s_frontend/app/chat/: layout.tsx  page.tsx
t2s_frontend/app/db/connect/: page.tsx
t2s_frontend/components/: QueryInputBar.tsx
t2s_frontend/components/chat/: ChatDashboardView.tsx  ChatWorkspace.tsx  chartFromRows.ts
t2s_frontend/lib/: api.ts  ws.ts
